# agents

./: .gitignore  README.md  agents.ipynb  agents.py  agents_v2.ipynb  debug.py  evals.py  pyproject.toml  tests.py
.ipynb_checkpoints/: agents-checkpoint.ipynb  agents-checkpoint.py  agents_v2-checkpoint.ipynb
