[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "jupyter>=1.1.1",
    "openai>=1.65.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.30",
    "python-dotenv>=1.0.1",
]
